# dappforce-subsocial-node

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  hackusama-submission.md  pallet_faucets.rs  rust-toolchain  types.json
docker/: Dockerfile  docker-compose.yml
node/: Cargo.toml
node/res/: stagingSpecRaw.json  subsocial.json
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/badges/: Cargo.toml  types.json
pallets/badges/src/: lib.rs  mock.rs  tests.rs
pallets/df-integration-tests/: Cargo.toml
pallets/df-integration-tests/src/: lib.rs
pallets/df-integration-tests/src/tests/: faucets.rs  profiles.rs
pallets/df-multiowner/: Cargo.toml  types.json
pallets/df-multiowner/src/: functions.rs  lib.rs  tests.rs
pallets/donations/: Cargo.toml  types.json
pallets/donations/src/: lib.rs
pallets/faucet/: Cargo.toml  types.json
pallets/faucet/src/: lib.rs  mock.rs  tests.rs
pallets/faucets/: Cargo.toml  types.json
pallets/faucets/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/moderation/: Cargo.toml
pallets/moderation/src/: functions.rs  lib.rs  mock.rs  tests.rs
pallets/permissions/: Cargo.toml  types.json
pallets/permissions/src/: default_permissions.rs  functions.rs  lib.rs  tests.rs
pallets/post-history/: Cargo.toml
pallets/post-history/src/: lib.rs
pallets/posts/: Cargo.toml  types.json
pallets/posts/rpc/: Cargo.toml
pallets/posts/rpc/runtime-api/: Cargo.toml
pallets/posts/rpc/runtime-api/src/: lib.rs
pallets/posts/rpc/src/: lib.rs
pallets/posts/runtime-api/: Cargo.toml
pallets/posts/runtime-api/src/: lib.rs
pallets/posts/src/: benchmarking.rs  functions.rs  lib.rs  rpc.rs  weights.rs
pallets/profile-follows/: Cargo.toml
pallets/profile-follows/rpc/: Cargo.toml
pallets/profile-follows/rpc/runtime-api/: Cargo.toml
pallets/profile-follows/rpc/runtime-api/src/: lib.rs
pallets/profile-follows/rpc/src/: lib.rs
pallets/profile-follows/src/: benchmarking.rs  lib.rs  rpc.rs  weights.rs
pallets/profile-history/: Cargo.toml
pallets/profile-history/src/: lib.rs
pallets/profiles/: Cargo.toml  types.json
pallets/profiles/rpc/: Cargo.toml
pallets/profiles/rpc/runtime-api/: Cargo.toml
pallets/profiles/rpc/src/: lib.rs
pallets/profiles/src/: benchmarking.rs  lib.rs  rpc.rs  weights.rs
pallets/reactions/: Cargo.toml
pallets/reactions/rpc/: Cargo.toml
pallets/reactions/rpc/runtime-api/: Cargo.toml
pallets/reactions/rpc/runtime-api/src/: lib.rs
pallets/reactions/rpc/src/: lib.rs
pallets/reactions/src/: benchmarking.rs  lib.rs  rpc.rs  weights.rs
pallets/roles/: Cargo.toml  types.json
pallets/roles/rpc/: Cargo.toml
pallets/roles/rpc/runtime-api/: Cargo.toml
pallets/roles/rpc/runtime-api/src/: lib.rs
pallets/roles/rpc/src/: lib.rs
pallets/roles/src/: benchmarking.rs  functions.rs  lib.rs  mock.rs  rpc.rs  tests.rs  weights.rs
pallets/scores/: Cargo.toml
pallets/scores/src/: lib.rs
pallets/session-keys/: Cargo.toml
pallets/session-keys/src/: lib.rs  mock.rs  tests.rs
pallets/social/: Cargo.toml  types.json
pallets/social/src/: defaults.rs  follows.rs  functions.rs  lib.rs  posts.rs  reactions.rs  roles.rs  scores.rs  spaces.rs  tests.rs
pallets/space-follows/: Cargo.toml
pallets/space-follows/rpc/: Cargo.toml
pallets/space-follows/rpc/runtime-api/: Cargo.toml
pallets/space-follows/rpc/runtime-api/src/: lib.rs
pallets/space-follows/rpc/src/: lib.rs
pallets/space-follows/src/: benchmarking.rs  lib.rs  rpc.rs  weights.rs
pallets/space-history/: Cargo.toml
pallets/space-history/src/: lib.rs
pallets/space-multi-ownership/: Cargo.toml  types.json
pallets/space-multi-ownership/src/: lib.rs  tests.rs
pallets/space-owners/: Cargo.toml  README.md  types.json
pallets/space-owners/src/: functions.rs  lib.rs  tests.rs
pallets/space-ownership/: Cargo.toml
pallets/space-ownership/src/: benchmarking.rs  lib.rs  weights.rs
pallets/spaces/: Cargo.toml  types.json
pallets/spaces/rpc/: Cargo.toml
pallets/spaces/rpc/runtime-api/: Cargo.toml
pallets/spaces/rpc/runtime-api/src/: lib.rs
pallets/spaces/rpc/src/: lib.rs
pallets/spaces/runtime-api/: Cargo.toml
pallets/spaces/runtime-api/src/: lib.rs
pallets/spaces/src/: benchmarking.rs  lib.rs  rpc.rs  weights.rs
pallets/subscriptions/: Cargo.toml  types.json
pallets/subscriptions/src/: functions.rs  lib.rs  mock.rs
pallets/traits/: Cargo.toml  types.json
pallets/traits/src/: lib.rs  moderation.rs
pallets/utils/: Cargo.toml  types.json
pallets/utils/src/: lib.rs  mock.rs  rpc.rs  tests.rs  traits.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: constants.rs  lib.rs
scripts/: aggregate_types.js  build-clean-start-dev.sh  build-spec-from-genesis.sh  clean-start-dev-nobuild.sh  generate-docs.sh  init.sh  start-dev-nobuild.sh  test-all.sh
src/: chain_spec.rs  main.rs  service.rs
