[package]
name = 'subsocial-primitives'
version = '0.6.0'
authors = ['DappForce <dappforce@pm.me>']
edition = '2018'
license = 'GPL-3.0-only'
homepage = 'https://subsocial.network'
repository = 'https://github.com/dappforce/dappforce-subsocial-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false, features = ['derive'] }
frame-system = { default-features = false, version = '3.0.0' }
sp-application-crypto = { default-features = false, version = '3.0.0' }
sp-core = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }

[dev-dependencies]
sp-serializer = { version = '3.0.0' }
pretty_assertions = '0.6.1'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-system/std',
    'sp-application-crypto/std',
    'sp-core/std',
    'sp-runtime/std',
]