[package]
name = "subsocial-runtime"
version = "2.0.0"
authors = ["DappForce <dappforce@pm.me>"]
edition = "2018"
license = "GPL-3.0-only"
homepage = "https://subsocial.network"
repository = "https://github.com/dappforce/dappforce-subsocial-node"
description = "Subsocial runtime"
keywords = ["blockchain", "cryptocurrency", "social-network", "news-feed", "marketplace"]
categories = ["cryptography::cryptocurrencies"]

[features]
default = ["std"]
std = [
    "aura/std",
    "balances/std",
    "codec/std",
    "frame-executive/std",
    "frame-support/std",
    "grandpa/std",
    "indices/std",
    "randomness-collective-flip/std",
    "safe-mix/std",
    "serde",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-io/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "sudo/std",
    "system/std",
    "timestamp/std",
    "transaction-payment/std",
    "pallet-permissions/std",
    "pallet-posts/std",
    "pallet-post-history/std",
    "pallet-profiles/std",
    "pallet-profile-follows/std",
    "pallet-profile-history/std",
    "pallet-reactions/std",
    "pallet-roles/std",
    "pallet-scores/std",
    "pallet-spaces/std",
    "pallet-space-follows/std",
    "pallet-space-ownership/std",
    "pallet-space-history/std",
    "pallet-utils/std"
]

[build-dependencies.wasm-builder-runner]
git = "https://github.com/paritytech/substrate.git"
package = "substrate-wasm-builder-runner"
rev = "3e651110aa06aa835790df63410a29676243fc54"
version = "1.0.4"

[dependencies.aura]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = "pallet-aura"
rev = "3e651110aa06aa835790df63410a29676243fc54"
version = "2.0.0"

[dependencies.balances]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = "pallet-balances"
rev = "3e651110aa06aa835790df63410a29676243fc54"
version = "2.0.0"

[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "1.0.0"

[dependencies.frame-executive]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
version = "2.0.0"

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
version = "2.0.0"

[dependencies.grandpa]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = "pallet-grandpa"
rev = "3e651110aa06aa835790df63410a29676243fc54"
version = "2.0.0"

[dependencies.indices]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = "pallet-indices"
rev = "3e651110aa06aa835790df63410a29676243fc54"
version = "2.0.0"

[dependencies.randomness-collective-flip]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = "pallet-randomness-collective-flip"
rev = "3e651110aa06aa835790df63410a29676243fc54"
version = "2.0.0"

[dependencies.safe-mix]
default-features = false
version = "1.0.0"

[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0.101"

[dependencies.sp-api]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
version = "2.0.0"

[dependencies.sp-block-builder]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"

[dependencies.sp-consensus-aura]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
version = "0.8"

[dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
version = "2.0.0"

[dependencies.sp-inherents]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"

[dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
version = "2.0.0"

[dependencies.sp-offchain]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
version = "2.0.0"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
version = "2.0.0"

[dependencies.sp-session]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
version = "2.0.0"

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
version = "2.0.0"

[dependencies.sp-transaction-pool]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
version = "2.0.0"

[dependencies.sp-version]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
version = "2.0.0"

[dependencies.sudo]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = "pallet-sudo"
rev = "3e651110aa06aa835790df63410a29676243fc54"
version = "2.0.0"

[dependencies.system]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = "frame-system"
rev = "3e651110aa06aa835790df63410a29676243fc54"
version = "2.0.0"

[dependencies.timestamp]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = "pallet-timestamp"
rev = "3e651110aa06aa835790df63410a29676243fc54"
version = "2.0.0"

[dependencies.transaction-payment]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = "pallet-transaction-payment"
rev = "3e651110aa06aa835790df63410a29676243fc54"
version = "2.0.0"

[dependencies.pallet-permissions]
default-features = false
path = "../pallets/permissions"

[dependencies.pallet-posts]
default-features = false
path = "../pallets/posts"

[dependencies.pallet-post-history]
default-features = false
path = "../pallets/post-history"

[dependencies.pallet-profiles]
default-features = false
path = "../pallets/profiles"

[dependencies.pallet-profile-follows]
default-features = false
path = "../pallets/profile-follows"

[dependencies.pallet-profile-history]
default-features = false
path = "../pallets/profile-history"

[dependencies.pallet-reactions]
default-features = false
path = "../pallets/reactions"

[dependencies.pallet-roles]
default-features = false
path = "../pallets/roles"

[dependencies.pallet-scores]
default-features = false
path = "../pallets/scores"

[dependencies.pallet-spaces]
default-features = false
path = "../pallets/spaces"

[dependencies.pallet-space-follows]
default-features = false
path = "../pallets/space-follows"

[dependencies.pallet-space-ownership]
default-features = false
path = "../pallets/space-ownership"

[dependencies.pallet-space-history]
default-features = false
path = "../pallets/space-history"

[dependencies.pallet-utils]
default-features = false
path = "../pallets/utils"
