[features]
default = ['std']
std = [
    'aura/std',
    'balances/std',
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'grandpa/std',
    'randomness-collective-flip/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'sudo/std',
    'system/std',
    'timestamp/std',
    'node-primitives/std',
    'transaction-payment/std',
    'pallet-scheduler/std',
    'pallet-utility/std',
#    'pallet-faucet/std',
#    'pallet-donations/std',
#    'pallet-moderation/std',
    'pallet-permissions/std',
    'pallet-posts/std',
    'pallet-post-history/std',
    'pallet-profiles/std',
    'pallet-profile-follows/std',
    'pallet-profile-history/std',
    'pallet-reactions/std',
    'pallet-roles/std',
    'pallet-scores/std',
    'pallet-spaces/std',
    'pallet-space-follows/std',
    'pallet-space-ownership/std',
    'pallet-space-history/std',
#    'pallet-session-keys/std',
#    'pallet-subscriptions/std',
    'pallet-utils/std',
]

[dependencies.aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-aura'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-balances'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.1'

[dependencies.frame-executive]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.grandpa]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-grandpa'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.randomness-collective-flip]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-randomness-collective-flip'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-consensus-aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '0.8.0-rc4'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-offchain]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-version]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sudo]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-sudo'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-timestamp'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.transaction-payment]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-transaction-payment'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.transaction-payment-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-transaction-payment-rpc-runtime-api'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.node-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.pallet-scheduler]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.pallet-utility]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

#[dependencies.pallet-faucet]
#default-features = false
#path = '../pallets/faucet'
#version = '0.1.0'

#[dependencies.pallet-donations]
#default-features = false
#path = '../pallets/donations'
#version = '0.4.0'

#[dependencies.pallet-moderation]
#default-features = false
#path = '../pallets/moderation'
#version = '0.4.0'

[dependencies.pallet-permissions]
default-features = false
path = '../pallets/permissions'
version = '0.4.0'

[dependencies.pallet-posts]
default-features = false
path = '../pallets/posts'
version = '0.4.0'

[dependencies.pallet-post-history]
default-features = false
path = '../pallets/post-history'
version = '0.4.0'

[dependencies.pallet-profiles]
default-features = false
path = '../pallets/profiles'
version = '0.4.0'

[dependencies.pallet-profile-follows]
default-features = false
path = '../pallets/profile-follows'
version = '0.4.0'

[dependencies.pallet-profile-history]
default-features = false
path = '../pallets/profile-history'
version = '0.4.0'

[dependencies.pallet-reactions]
default-features = false
path = '../pallets/reactions'
version = '0.4.0'

[dependencies.pallet-roles]
default-features = false
path = '../pallets/roles'
version = '0.4.0'

[dependencies.pallet-scores]
default-features = false
path = '../pallets/scores'
version = '0.4.0'

[dependencies.pallet-spaces]
default-features = false
path = '../pallets/spaces'
version = '0.4.0'

[dependencies.pallet-space-follows]
default-features = false
path = '../pallets/space-follows'
version = '0.4.0'

[dependencies.pallet-space-ownership]
default-features = false
path = '../pallets/space-ownership'
version = '0.4.0'

[dependencies.pallet-space-history]
default-features = false
path = '../pallets/space-history'
version = '0.4.0'

#[dependencies.pallet-subscriptions]
#default-features = false
#path = '../pallets/subscriptions'
#version = '0.1.0'

[dependencies.pallet-utils]
default-features = false
path = '../pallets/utils'
version = '0.4.0'

#[dependencies.pallet-session-keys]
#default-features = false
#path = '../pallets/session-keys'
#version = '0.4.0'

[package]
name = 'subsocial-runtime'
version = '0.4.0'
authors = ['DappForce <dappforce@pm.me>']
edition = '2018'
license = 'GPL-3.0-only'
homepage = 'https://subsocial.network'
repository = 'https://github.com/dappforce/dappforce-subsocial-node'
description = 'Subsocial runtime'
keywords = ['blockchain', 'cryptocurrency', 'social-network', 'news-feed', 'marketplace']
categories = ['cryptography::cryptocurrencies']
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
[build-dependencies.wasm-builder-runner]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-wasm-builder-runner'
tag = 'v2.0.0-rc4'
version = '1.0.5'
