[features]
default = ['std']
std = [
    'aura/std',
    'balances/std',
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'grandpa/std',
    'randomness-collective-flip/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'sudo/std',
    'system/std',
    'timestamp/std',
    'node-primitives/std',
    'transaction-payment/std',
    'pallet-scheduler/std',
    'pallet-utility/std',
    'pallet-faucets/std',
#    'pallet-donations/std',
#    'pallet-moderation/std',
    'pallet-permissions/std',
    'pallet-posts/std',
    'pallet-post-history/std',
    'pallet-profiles/std',
    'pallet-profile-follows/std',
    'pallet-profile-history/std',
    'pallet-reactions/std',
    'pallet-roles/std',
    'pallet-scores/std',
    'pallet-spaces/std',
    'pallet-space-follows/std',
    'pallet-space-ownership/std',
    'pallet-space-history/std',
#    'pallet-session-keys/std',
#    'pallet-subscriptions/std',
    'pallet-utils/std',
]

[dependencies.aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-aura'
tag = 'v2.0.1'

[dependencies.balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-balances'
tag = 'v2.0.1'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.1'

[dependencies.frame-executive]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.1'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.1'

[dependencies.grandpa]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-grandpa'
tag = 'v2.0.1'

[dependencies.randomness-collective-flip]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-randomness-collective-flip'
tag = 'v2.0.1'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.1'

[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.1'

[dependencies.sp-consensus-aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.1'
version = '0.8.0'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.1'

[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.1'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.1'

[dependencies.sp-offchain]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.1'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.1'

[dependencies.sp-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.1'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.1'

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.1'

[dependencies.sp-version]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.1'

[dependencies.sudo]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-sudo'
tag = 'v2.0.1'

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
tag = 'v2.0.1'

[dependencies.timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-timestamp'
tag = 'v2.0.1'

[dependencies.transaction-payment]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-transaction-payment'
tag = 'v2.0.1'

[dependencies.transaction-payment-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-transaction-payment-rpc-runtime-api'
tag = 'v2.0.1'

[dependencies.node-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.1'

[dependencies.pallet-scheduler]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.1'

[dependencies.pallet-utility]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.1'

[dependencies.pallet-faucets]
default-features = false
path = '../pallets/faucets'

#[dependencies.pallet-donations]
#default-features = false
#path = '../pallets/donations'

#[dependencies.pallet-moderation]
#default-features = false
#path = '../pallets/moderation'

[dependencies.pallet-permissions]
default-features = false
path = '../pallets/permissions'

[dependencies.pallet-posts]
default-features = false
path = '../pallets/posts'

[dependencies.pallet-post-history]
default-features = false
path = '../pallets/post-history'

[dependencies.pallet-profiles]
default-features = false
path = '../pallets/profiles'

[dependencies.pallet-profile-follows]
default-features = false
path = '../pallets/profile-follows'

[dependencies.pallet-profile-history]
default-features = false
path = '../pallets/profile-history'

[dependencies.pallet-reactions]
default-features = false
path = '../pallets/reactions'

[dependencies.pallet-roles]
default-features = false
path = '../pallets/roles'

[dependencies.pallet-scores]
default-features = false
path = '../pallets/scores'

[dependencies.pallet-spaces]
default-features = false
path = '../pallets/spaces'

[dependencies.pallet-space-follows]
default-features = false
path = '../pallets/space-follows'

[dependencies.pallet-space-ownership]
default-features = false
path = '../pallets/space-ownership'

[dependencies.pallet-space-history]
default-features = false
path = '../pallets/space-history'

#[dependencies.pallet-subscriptions]
#default-features = false
#path = '../pallets/subscriptions'

[dependencies.pallet-utils]
default-features = false
path = '../pallets/utils'

#[dependencies.pallet-session-keys]
#default-features = false
#path = '../pallets/session-keys'

[package]
name = 'subsocial-runtime'
version = '0.6.0'
authors = ['DappForce <dappforce@pm.me>']
edition = '2018'
license = 'GPL-3.0-only'
homepage = 'https://subsocial.network'
repository = 'https://github.com/dappforce/dappforce-subsocial-node'
description = 'Subsocial runtime'
keywords = ['blockchain', 'cryptocurrency', 'social-network', 'news-feed', 'marketplace']
categories = ['cryptography::cryptocurrencies']

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies.wasm-builder-runner]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-wasm-builder-runner'
tag = 'v2.0.1'
version = '1.0.5'
