[package]
name = 'pallet-badges'
version = '0.1.0'
authors = ['DappForce <dappforce@pm.me>', 'Vladyslav Samchuk']
edition = '2018'
license = 'GPL-3.0-only'
homepage = 'https://subsocial.network'
repository = 'https://github.com/dappforce/dappforce-subsocial-node'
description = 'Subsocial space badges and rewards pallet'
keywords = ['blockchain', 'cryptocurrency', 'social-network', 'news-feed', 'marketplace']
categories = ['cryptography::cryptocurrencies']

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = ['std']
std = [
    'codec/std',
    'sp-std/std',
    'sp-runtime/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-timestamp/std',
    'pallet-permissions/std',
    'pallet-spaces/std',
    'pallet-utils/std',
]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.1'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.pallet-permissions]
default-features = false
path = '../permissions'
version = '0.4.0'

[dependencies.pallet-spaces]
default-features = false
path = '../spaces'
version = '0.4.0'

[dependencies.pallet-utils]
default-features = false
path = '../utils'
version = '0.4.0'

[dev-dependencies.pallet-balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dev-dependencies.pallet-space-follows]
default-features = false
path = '../space-follows'
version = '0.4.0'

[dev-dependencies.pallet-profiles]
default-features = false
path = '../profiles'
version = '0.4.0'

[dev-dependencies.pallet-roles]
default-features = false
path = '../roles'
version = '0.4.0'

[dev-dependencies.pallet-moderation]
default-features = false
path = '../moderation'
version = '0.4.0'

[dev-dependencies.pallet-posts]
default-features = false
path = '../posts'
version = '0.4.0'
