[package]
name = "df-integration-tests"
version = "2.0.0"
authors = ["DappForce <dappforce@pm.me>"]
edition = "2018"
license = "GPL-3.0-only"
homepage = "https://subsocial.network"
repository = "https://github.com/dappforce/dappforce-subsocial-node"
description = "Integration tests"
keywords = ["blockchain", "cryptocurrency", "social-network", "news-feed", "marketplace"]
categories = ["cryptography::cryptocurrencies"]

[features]
default = ['std']
std = [
    'sp-runtime/std',
    'frame-support/std',
    'system/std',
    'sp-io/std',
    'sp-std/std',
    'pallet-timestamp/std',
    "pallet-permissions/std",
    "pallet-posts/std",
    "pallet-post-history/std",
    "pallet-profiles/std",
    "pallet-profile-history/std",
    "pallet-profile-follows/std",
    "pallet-reactions/std",
    "pallet-roles/std",
    "pallet-scores/std",
    "pallet-spaces/std",
    "pallet-space-follows/std",
    "pallet-space-history/std",
    "pallet-space-ownership/std",
    "pallet-utils/std"
]

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3e651110aa06aa835790df63410a29676243fc54'
version = '2.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3e651110aa06aa835790df63410a29676243fc54'
version = '2.0.0'

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
rev = '3e651110aa06aa835790df63410a29676243fc54'
version = '2.0.0'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3e651110aa06aa835790df63410a29676243fc54'
version = '2.0.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3e651110aa06aa835790df63410a29676243fc54'
version = '2.0.0'

[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3e651110aa06aa835790df63410a29676243fc54'
version = '2.0.0'

[dependencies.pallet-permissions]
default-features = false
path = "../permissions"

[dependencies.pallet-posts]
default-features = false
path = "../posts"

[dependencies.pallet-post-history]
default-features = false
path = "../post-history"

[dependencies.pallet-profiles]
default-features = false
path = "../profiles"

[dependencies.pallet-profile-history]
default-features = false
path = "../profile-history"

[dependencies.pallet-profile-follows]
default-features = false
path = "../profile-follows"

[dependencies.pallet-reactions]
default-features = false
path = "../reactions"

[dependencies.pallet-roles]
default-features = false
path = "../roles"

[dependencies.pallet-scores]
default-features = false
path = "../scores"

[dependencies.pallet-spaces]
default-features = false
path = "../spaces"

[dependencies.pallet-space-follows]
default-features = false
path = "../space-follows"

[dependencies.pallet-space-history]
default-features = false
path = "../space-history"

[dependencies.pallet-space-ownership]
default-features = false
path = "../space-ownership"

[dependencies.pallet-utils]
default-features = false
path = "../utils"

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3e651110aa06aa835790df63410a29676243fc54'
version = '2.0.0'
