[package]
name = 'df-integration-tests'
version = '0.6.0'
authors = ['DappForce <dappforce@pm.me>']
edition = '2018'
license = 'GPL-3.0-only'
homepage = 'https://subsocial.network'
repository = 'https://github.com/dappforce/dappforce-subsocial-node'
description = 'Integration tests'
keywords = ['blockchain', 'cryptocurrency', 'social-network', 'news-feed', 'marketplace']
categories = ['cryptography::cryptocurrencies']

[features]
default = ['std']
std = [
    'sp-runtime/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-balances/std',
    'sp-io/std',
    'sp-std/std',
#    'pallet-moderation/std',
    'pallet-timestamp/std',
    'pallet-permissions/std',
    'pallet-posts/std',
    'pallet-post-history/std',
    'pallet-profiles/std',
    'pallet-profile-history/std',
    'pallet-profile-follows/std',
    'pallet-reactions/std',
    'pallet-roles/std',
    'pallet-scores/std',
    'pallet-spaces/std',
    'pallet-space-follows/std',
    'pallet-space-history/std',
    'pallet-space-ownership/std',
    'pallet-utils/std'
]

[dependencies]
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
pallet-balances = { default-features = false, version = '3.0.0' }
pallet-timestamp = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }

[dev-dependencies]
pallet-moderation = { default-features = false, path = '../moderation' }
pallet-permissions = { default-features = false, path = '../permissions' }
pallet-post-history = { default-features = false, path = '../post-history' }
pallet-posts = { default-features = false, path = '../posts' }
pallet-profile-follows = { default-features = false, path = '../profile-follows' }
pallet-profile-history = { default-features = false, path = '../profile-history' }
pallet-profiles = { default-features = false, path = '../profiles' }
pallet-reactions = { default-features = false, path = '../reactions' }
pallet-roles = { default-features = false, path = '../roles' }
pallet-scores = { default-features = false, path = '../scores' }
pallet-space-follows = { default-features = false, path = '../space-follows' }
pallet-space-history = { default-features = false, path = '../space-history' }
pallet-space-ownership = { default-features = false, path = '../space-ownership' }
pallet-spaces = { default-features = false, path = '../spaces' }
pallet-utils = { default-features = false, path = '../utils' }

sp-core = { default-features = false, version = '3.0.0' }
pallet-balances = { default-features = false, version = '3.0.0' }
