[package]
name = 'pallet-donations'
version = '0.6.0'
authors = ['DappForce <dappforce@pm.me>']
edition = '2018'
license = 'GPL-3.0-only'
homepage = 'https://subsocial.network'
repository = 'https://github.com/dappforce/dappforce-subsocial-node'
description = 'Donate tokens to accounts, spaces, posts or comments you want to support'
keywords = ['blockchain', 'cryptocurrency', 'social-network', 'news-feed', 'marketplace']
categories = ['cryptography::cryptocurrencies']

[features]
default = ['std']
std = [
    'codec/std',
    'sp-std/std',
    'sp-runtime/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-utils/std',
    'pallet-permissions/std',
    'pallet-posts/std',
    'pallet-spaces/std',
]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v3.0.0'
version = '3.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v3.0.0'
version = '3.0.0'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v3.0.0'
version = '3.0.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v3.0.0'
version = '3.0.0'

[dependencies.pallet-utils]
default-features = false
path = '../utils'

[dependencies.pallet-permissions]
default-features = false
path = '../permissions'

[dependencies.pallet-spaces]
default-features = false
path = '../spaces'

[dependencies.pallet-posts]
default-features = false
path = '../posts'
